k8s/003-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gps
  namespace: burry
spec:
  ports:
    - name: http-gps
      protocol: TCP
      port: 8011
      targetPort: 8011
  selector:
    app: app-gps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gps
  namespace: burry
spec:
  selector:
    matchLabels:
      app: app-gps
  template:
    metadata:
      labels:
        app: app-gps
    spec:
      volumes:
      - name: gps-properties
        configMap:
          name: gps-config-map
#      - name: gps-properties
#        emptyDir: {}
      containers:
      - name: gps
        image: siropops/burry-gps:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8011
          initialDelaySeconds: 120
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8011
          protocol: TCP
        volumeMounts:
        - name: gps-properties
          mountPath: /app/properties
          readOnly: true
#        volumeMounts:
#        - name: gps-properties
#          mountPath: /app/properties
#          readOnly: true
#      initContainers:
#      - name: gps-init
#        image: siropops/burry-gps-confd:0.0.1-SNAPSHOT
#        imagePullPolicy: IfNotPresent
#        envFrom:
#        - configMapRef:
#            name: gps-config-map
#        volumeMounts:
#        - name: gps-properties
#          mountPath: /app/properties
