k8s/004-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gps
  namespace: burry
spec:
  ports:
    - name: http-gps
      protocol: TCP
      port: 8011
      targetPort: 8011
  selector:
    app: app-gps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gps
  namespace: burry
spec:
  selector:
    matchLabels:
      app: app-gps
  template:
    metadata:
      labels:
        app: app-gps
    spec:
      volumes:
      - name: gps-properties
        configMap:
          name: gps-config-map
      - name: gps-credentials
        emptyDir: {}
      containers:
      - name: gps
        image: siropops/burry-gps:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8011
          initialDelaySeconds: 240
          timeoutSeconds: 3
          failureThreshold: 3
        ports:
        - containerPort: 8011
          protocol: TCP
        volumeMounts:
        - name: gps-properties
          mountPath: /app/properties
          readOnly: true
        - name: gps-credentials
          mountPath: /app/credentials
          readOnly: true
